Curve set handler type error #111840

Closed
opened 2023-09-03 02:16:07 +02:00 by RedHaloStudio · 9 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.99

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-01 21:43, hash: de09bdb510a0
Worked: (newest version of Blender that worked as expected)

Short description of error
Type of curve Handles can be setted only if both points are selected.

Exact steps for others to reproduce the error

  1. Create a bezier curve
  2. Toggle edit mode
  3. Select any point and set handle type, does not result in any response. only select the left and right handles can be operated normally.
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.99 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-01 21:43, hash: `de09bdb510a0` Worked: (newest version of Blender that worked as expected) **Short description of error** Type of curve Handles can be setted only if both points are selected. **Exact steps for others to reproduce the error** 1. Create a bezier curve 2. Toggle edit mode 3. Select any point and set handle type, does not result in any response. only select the left and right handles can be operated normally.
RedHaloStudio added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-09-03 02:16:08 +02:00
Iliya Katushenock added the
Interest
Modeling
label 2023-09-03 03:22:55 +02:00

Con confirm, but not sure if this is really bug.

Con confirm, but not sure if this is really bug.
Author

I'm sure it's a bug.

I'm sure it's a bug.
Member

Hi, thanks for the report. Can confirm when only controls point is selected.
I'll check.

Hi, thanks for the report. Can confirm when only controls point is selected. I'll check.
Pratik Borhade added
Module
Modeling
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-09-04 06:21:34 +02:00
Pratik Borhade self-assigned this 2023-09-04 06:21:43 +02:00
Author

This problem has only appeared since this version, no problems with previous versions

Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-01 21:43, hash: de09bdb510a0

This problem has only appeared since this version, no problems with previous versions Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-01 21:43, hash: `de09bdb510a0`
Member

This problem has only appeared since this version, no problems with previous versions

Don't think so. I'm able to repeat this bug in older versions as well (checked in 3.0).


If control-points are not intended to change the handle type, we should just CANCEL the operation to avoid confusion.

> This problem has only appeared since this version, no problems with previous versions Don't think so. I'm able to repeat this bug in older versions as well (checked in 3.0). - - - If control-points are not intended to change the handle type, we should just `CANCEL` the operation to avoid confusion.

I can confirm it, in the vector handle type, when selecting points, the handle is not included. When moving the position, the handles don't move with it, causing the curve to deform. This is different from the 3.6 behavior.

Interestingly, the results obtained using random selection include handles, increase selection (Ctrl + +) too.

I can confirm it, in the vector handle type, when selecting points, the handle is not included. When moving the position, the handles don't move with it, causing the curve to deform. This is different from the 3.6 behavior. Interestingly, the results obtained using random selection include handles, increase selection (`Ctrl + +`) too.
Member

Caused by 618f39fca2 cc @ideasman42

This leads to that when selecting the curve point, it will no longer select its two control handles at the same time, breaking old behaviour.

Caused by 618f39fca23ca7734a09a8f08efced83 cc @ideasman42 This leads to that when selecting the curve point, it will no longer select its two control handles at the same time, breaking old behaviour.
YimingWu added
Priority
High
and removed
Priority
Normal
labels 2023-09-06 04:57:57 +02:00
Member
CC @JulienKaspar
Member

Handles are no longer selected to make sure tweaking handles is still possible with the new behavior of 618f39fca2.

I propose to make sure the behavior matches the Graph Editor more closely to make sure there are no issues. There the handles are moved together with the center point even if unselected. The behavior always fits the handle type.

Handles are no longer selected to make sure tweaking handles is still possible with the new behavior of 618f39fca2. I propose to make sure the behavior matches the Graph Editor more closely to make sure there are no issues. There the handles are moved together with the center point even if unselected. The behavior always fits the handle type.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-06 14:11:37 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#111840
No description provided.